--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-hook-form": "^7.19.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^3.0.0",
